CRUD com Relacionamento, DTO, Service, Status Code e Bean Validation