@@ -1,7 +1,6 @@
 package br.unitins.tp1.dto;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import br.unitins.tp1.model.Fornecedor;
 
@@ -15,11 +14,8 @@ public record FornecedorResponseDTO(
     List<ProdutoResponseDTO> produtos
 ) {
     public static FornecedorResponseDTO valueOf(Fornecedor fornecedor){
-        if (fornecedor == null) {
-            return null; // Pode retornar null ou criar um FornecedorResponseDTO com valores padrão, conforme necessário.
-        }
         List<ProdutoResponseDTO> produtos = fornecedor.getProdutos()
-            .stream().map(produto -> ProdutoResponseDTO.valueOf(produto)).collect(Collectors.toList());
+            .stream().map(produto -> ProdutoResponseDTO.valueOf(produto)).toList();
         return new FornecedorResponseDTO(
             fornecedor.getId(),
             fornecedor.getNome(),
@@ -29,5 +25,15 @@ public record FornecedorResponseDTO(
             fornecedor.getCnpj(),
             produtos
         );
+    }
+    public Fornecedor toEntity() {
+        Fornecedor fornecedor = new Fornecedor();
+        fornecedor.setId(id());
+        fornecedor.setNome(nome());
+        fornecedor.setTelefone(telefone());
+        fornecedor.setLocalLojaFornecedor(localLojaFornecedor());
+        fornecedor.setEmail(email());
+        fornecedor.setCnpj(cnpj());
+        return fornecedor;
     }
 }
